Fixed some styling on the open requests page on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -2051,6 +2051,8 @@ progress {
   border-radius: 0.375rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+
 @media (prefers-reduced-motion: reduce) {
   .form-control {
     transition: none;
@@ -12524,10 +12526,10 @@ footer a:hover, footer a:active, footer a:focus {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 900px) {
   .request-grid {
     grid-template-columns: repeat(1, 1fr);
-    max-height: 240px;
+    
   }
 }
 
@@ -12608,6 +12610,19 @@ footer a:hover, footer a:active, footer a:focus {
   line-height: normal;
 }
 
+.status-request-container {
+  display: flex;
+  gap:10px; 
+}
+
+@media (max-width: 500px) {
+  .status-request-container {
+    flex-direction: column;
+  }
+}
+
+
+
 .request-status {
   text-align: left;
   display: flex;
@@ -12648,6 +12663,30 @@ footer a:hover, footer a:active, footer a:focus {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+@media (max-width: 575px) {
+  .promotion-status {
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  .request-status {
+    padding: 10px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 400px) {
+  .promotion-status {
+    padding: 10px;
+    font-size: 12px;
+  }
+
+  .request-status {
+    padding: 10px;
+    font-size: 12px;
+  }
 }
 
 .request-subtype {
